kubernetes/apps/authentik/authentik-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
  labels:
    app: authentik-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      containers:
        - name: authentik-worker
          image: ghcr.io/goauthentik/server:2024.4.2
          args: ["worker"]
          volumeMounts:
            - name: media
              mountPath: /media
            - name: templates
              mountPath: /templates
      volumes:
        - name: media
          emptyDir: {}
        - name: templates
          emptyDir: {}
