kubernetes/apps/authentik/authentik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-service
  namespace: authentik
spec:
  type: NodePort
  selector:
    app: authentik-server
  ports:
    - port: 80
      targetPort: http
      nodePort: 30090
      name: http
    - port: 443
      targetPort: https
      nodePort: 30443
      name: https
