kubernetes/apps/authentik/authentik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auth.isarcloud.eu
      secretName: authentik-tls
  rules:
    - host: auth.isarcloud.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-service
                port:
                  number: 80
